LRU and LFU cache completed

--- a/Assignments/Assignment 1/.vscode/settings.json
+++ b/Assignments/Assignment 1/.vscode/settings.json
@@ -45,5 +45,6 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "map": "cpp"
-    }
+    },
+    "workbench.editor.enablePreviewFromQuickOpen": true
 }
